--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,31 @@
   "HOME": {
     "TITLE": "Hello Angular with ngx-translate!",
     "SELECT": "Change language"
-  }
+  },
+  "home.page":"Home",
+  "course.page":"Course",
+  "user.page":"Users",
+  "verasion":"Version",
+  "all.rights":"All Rights Reserved © 2023",
+  "support":"support Team",
+  "student.page":"Student",
+  "user.header.name":"Hello",
+  "ADD_EDIT_COURSE":"Edit Course",
+  "FIND_COURSES":"Find Course",
+  "ADD_USER":"Add User",
+  "LIST_USER":"List User",
+  "ADD_EDIT_STUDENT":"Edit Student Data",
+  "FIND_STUDENTS":"Find Student",
+  "language":"English",
+  "icon.home.page":"pi pi-home",
+  "icon.course.page":"bi bi-book-half",
+  "icon.user.page":"pi pi-fw pi-user",
+  "icon.student.page":"pi pi-user-minus",
+  "icon.ADD_EDIT_COURSE":"bi bi-journal-plus",
+  "icon.FIND_COURSES":"bi bi-book",
+  "icon.ADD_USER":"bi bi-person-add",
+  "icon.LIST_USER":"bi bi-people-fill",
+  "icon.ADD_EDIT_STUDENT":"pi pi-user-plus",
+  "icon.FIND_STUDENTS":"pi pi-users"
+  
 }
