--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -2,19 +2,21 @@
   "ar": "العربية",
   "en": "إنجليزي",
   "verasion":"نسخة",
-  "all.rights":"جميغ الحقوق محفوظة © 2023",
+  "all.rights":"جميغ الحقوق محفوظة©2024",
   "support":"فريق الدعم",
-  "home.page":"القائمة الرئيسية",
-  "course.page":"الكورسات",
+  "home.page":"الرئيسية",
+  "appointment.page":"المواعيد",
   "user.page":"المستخدمين",
-  "student.page":"الطلاب",
+  "oil.page":"الزيوت",
   "user.header.name":"مرحبا",
-  "ADD_EDIT_COURSE":"تعديل بيانات الكورس",
-  "FIND_COURSES":"اضافات كورس",
-  "ADD_USER":"اضافات مستخدم",
+  "ADD_EDIT_USER":"اضافة مستخدم",
+  "ADD_EDIT_APPOINTMENT":"اضافة موعد",
+  "ADD_EDIT_REQUESTED_OIL":"تعديل طلب زيت",
+  "LIST_REQUESTED_OIL":"عرض طلبات الزيوت",
+  "FIND_APPOINTMENT":"بحث عن المواعيد",
   "LIST_USER":"عرض المستخدمين",
-  "ADD_EDIT_STUDENT":"تعديل بيانات الطلاب",
-  "FIND_STUDENTS":"البحث عن الطلاب",
+  "ADD_EDIT_OIL":"اضافة او تعديل زيت",
+  "FIND_OIL":"البحث عن زيت",
   "language":"العربية",
   "icon.home.page":"pi pi-home",
   "icon.course.page":"bi bi-book-half",
@@ -22,7 +24,7 @@
   "icon.student.page":"pi pi-user-minus",
   "icon.ADD_EDIT_COURSE":"bi bi-journal-plus",
   "icon.FIND_COURSES":"bi bi-book",
-  "icon.ADD_USER":"bi bi-person-add",
+  "icon.ADD_EDIT_USER":"bi bi-person-add",
   "icon.LIST_USER":"bi bi-people-fill",
   "icon.ADD_EDIT_STUDENT":"pi pi-user-plus",
   "icon.FIND_STUDENTS":"pi pi-users"
