--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,26 +4,28 @@
     "SELECT": "Change language"
   },
   "home.page":"Home",
-  "course.page":"Course",
+  "oil.page":"Oil",
   "user.page":"Users",
   "verasion":"Version",
-  "all.rights":"All Rights Reserved © 2023",
+  "all.rights":"All Rights Reserved © 2024",
   "support":"support Team",
-  "student.page":"Student",
+  "appointment.page":"Appointment",
   "user.header.name":"Hello",
   "ADD_EDIT_COURSE":"Edit Course",
   "FIND_COURSES":"Find Course",
   "ADD_USER":"Add User",
-  "LIST_USER":"List User",
-  "ADD_EDIT_STUDENT":"Edit Student Data",
-  "FIND_STUDENTS":"Find Student",
+  "ADD_EDIT_OIL":"Add Oil",
+  "FIND_OIL":"Find Oil",
+ 
+  "ADD_EDIT_APPOINTMENT":"Add Appointment",
+  "FIND_APPOINTMENT":"Find Appointment",
   "language":"English",
   "icon.home.page":"pi pi-home",
-  "icon.course.page":"bi bi-book-half",
+  "icon.appointment.page":"bi bi-file-plus",
   "icon.user.page":"pi pi-fw pi-user",
   "icon.student.page":"pi pi-user-minus",
   "icon.ADD_EDIT_COURSE":"bi bi-journal-plus",
-  "icon.FIND_COURSES":"bi bi-book",
+  "icon.oil.page":"bi bi-wrench-adjustable",
   "icon.ADD_USER":"bi bi-person-add",
   "icon.LIST_USER":"bi bi-people-fill",
   "icon.ADD_EDIT_STUDENT":"pi pi-user-plus",
